php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #9762 compiling fails with ZTS and imap (imap2000) support enabled
Submitted: 2001-03-15 03:25 UTC Modified: 2001-03-16 08:23 UTC
From: jleg at nrw dot net Assigned:
Status: Closed Package: Compile Failure
PHP Version: 4.0 Latest CVS (15/03/2001) OS: Linux 2.2.16
Private report: No CVE-ID: None
 [2001-03-15 03:25 UTC] jleg at nrw dot net
$subject says it all; this patch gets around this:

--- ext/imap/php_imap.c~        Wed Mar 14 21:15:08 2001
+++ ext/imap/php_imap.c Thu Mar 15 09:20:09 2001
@@ -366,6 +366,7 @@
  */
 void mail_getquota(MAILSTREAM *stream, char *qroot,QUOTALIST *qlist)
 {
+       IMAPLS_FETCH();
        /* this should only be run through once */
        for (; qlist; qlist = qlist->next)
        {
@@ -1021,7 +1022,8 @@

        int ind, ind_type;
        pils *imap_le_struct;
-
+       IMAPLS_FETCH();
+
        if (ZEND_NUM_ARGS() != 2 || zend_get_parameters_ex(2, &streamind, &qroot) == FAILURE) {
                ZEND_WRONG_PARAM_COUNT();
        }

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2001-03-15 09:52 UTC] kalowsky@php.net
First I've heard of the compile failure... but the patch looks legit.  Doing some quick tests locally here, and then I'll submit it.  This should more than likely also go into the next 4.0.5RC, but I'll have to check with the QA/Group people first...


 [2001-03-16 08:23 UTC] sniper@php.net
Fixed in CVS.

--Jani

 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Wed Sep 09 02:00:02 2026 UTC