Make compile again when ZTS is enabled and imap-2000 is used. Bug #9762