ext/imap/php_imap.c
@@ -366,6 +366,8 @@ MESSAGELIST *mail_newmessagelist(void)
  */
 void mail_getquota(MAILSTREAM *stream, char *qroot,QUOTALIST *qlist)
 {
+	IMAPLS_FETCH();
+
 	/* this should only be run through once */
 	for (; qlist; qlist = qlist->next)
 	{
@@ -1018,9 +1020,9 @@ PHP_FUNCTION(imap_num_recent)
 PHP_FUNCTION(imap_get_quota)
 {
 	zval **streamind, **qroot;
-
 	int ind, ind_type;
 	pils *imap_le_struct;
+	IMAPLS_FETCH();
 
 	if (ZEND_NUM_ARGS() != 2 || zend_get_parameters_ex(2, &streamind, &qroot) == FAILURE) {
 		ZEND_WRONG_PARAM_COUNT();
